# mcpServer

./: .env  AMap_adcode_citycode.xlsx  README_CHAT.md  README_FRONTEND_BACKEND.md  chat_server.py  client.py  clinet_openai.py  clinet_openai_copy.py  curl.sh  debug_server.py  myMcp.py  openaiSimple.py  openai_schema_builder.py  pyproject.toml  reload.py  requirements.txt  schemas.json  server.py  start_chat_server.sh  start_server.sh  start_server_nohup.sh  stop_server.sh  systemd_service.template  test.py  test_chat.py
static/css/: chat.css
static/js/: chat.js
templates/: chat.html
tools/: city2code.py
