[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "mcp[cli]>=1.13.0",
    "openai>=1.100.2",
    "openai-agents>=0.2.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "watchdog>=6.0.0",
]
